--- a/src/App.css
+++ b/src/App.css
@@ -14,9 +14,11 @@
 
 .card-items{
   display: grid;
+  width: 85%;
+  margin: auto auto 30px auto;
   grid-template-columns: 1fr 1fr 1fr 1fr;
-  row-gap: 70px;
-  column-gap: 5px;
+  row-gap: 30px;
+  column-gap: 30px;
 }
 
 teste{
@@ -25,8 +27,17 @@ teste{
   justify-content: center;
 }
 
-@media (max-width: 1000px) {
+@media (max-width: 1400px) {
+  .card-items{
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+}
+
+
+@media (max-width: 1100px) {
   .card-items{
     grid-template-columns: 1fr 1fr;
+    width: 95%;
+    column-gap: 10px;
   }
 }
