--- a/src/components/HomePage.css
+++ b/src/components/HomePage.css
@@ -26,11 +26,12 @@
 
 .item{
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: auto auto auto;
 }
 
 #produtos{
     text-align: right;
+    margin-left: 0;
 }
 
 #ajuda{
