--- a/src/components/Item.css
+++ b/src/components/Item.css
@@ -1,8 +1,16 @@
 .card-body{
     background-color: #ECECEC;
+
     margin: auto;
-    width: 70%;
+    width: 100%;
     text-align: center;
+    height: 100%;
+}
+
+.card-body img{
+    margin-top: 10px;
+    width: 180px;
+    height: 180px;
 }
 
 .card-body h3{
@@ -17,19 +25,10 @@
     font-weight: bold;
 }
 
-.card-body button{
-    color: #424141;
-    border: none;
-    border-radius: 5px;
-    background: #B6C72B;
-    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-    font-size: 17px;
+.card-body Button{
     padding: 10px;
     width: 70%;
-    height: auto;
+    margin-bottom: 20px;
 }
 
-.card-body button:hover{
-    background: #bed12e;
-    cursor: pointer;
-}
+
