--- a/src/components/Cart.css
+++ b/src/components/Cart.css
@@ -9,6 +9,17 @@
     height: auto;
 }
 
+.cart-panel .header{
+    margin-right: 70px;
+    display: grid;
+    grid-template-columns: 2fr 1fr 1fr;
+    text-align: center;
+}
+
+.qty{
+    text-align: left;
+}
+
 .cart-panel h1{
     text-align: center;
     color: #424141;
@@ -16,7 +27,7 @@
     font-weight: normal;
 }
 
-.cart-panel Button{
+.cart-panel button{
     margin: 20px 25px;
     padding: 7px 15px;
 }
@@ -25,4 +36,27 @@
     .cart-panel{
         width: 90%;
     }
+}
+
+.cart-panel .bot{
+    display: grid;
+    grid-template-columns: 2fr 1fr 1fr;
+    text-align: center;
+    margin: auto;
+}
+
+.cart-panel button{
+    color: #424141;
+    border: none;
+    border-radius: 5px;
+    background: #B6C72B;
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
+    font-size: 17px;
+    height: auto;
+}
+
+
+.cart-panel button:hover{
+    background: #bed12e;
+    cursor: pointer;
 }
