--- a/src/components/ItemOnCart.css
+++ b/src/components/ItemOnCart.css
@@ -27,9 +27,22 @@
 .onCartItem p{
     font-size: 17px;
     margin: auto;
+
 }
 
-.onCartItem Button{
+.onCartItem button{
     margin: auto;
     padding: 5px 15px;
+    color: #424141;
+    border: none;
+    border-radius: 5px;
+    background: #B6C72B;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    font-size: 17px;
+    height: auto;
+}
+
+.onCartItem button:hover{
+    background: #bed12e;
+    cursor: pointer;
 }
