finished de logic

--- a/src/components/AboutUs.css
+++ b/src/components/AboutUs.css
@@ -15,21 +15,34 @@
     height: 100%;
 }
 
+
 .about-us h2{
     margin: 5% 10%;
 }
 
 .about-us p{
-    margin: 2% 10%;
+    margin: 5% 10%;
     line-height: 2;
     font-size: 23px;
     color: #424141;
 }
 
-@media (max-width: 1100px) {
+@media (max-width: 900px) {
+    .about-us{
+        width: 100vw;
+        min-height: auto;
+        display: grid;
+        grid-template-columns: 1fr;
+    }
+
+
     .about-us p{
         line-height: 1;
         font-size: 15px;
+    }
+
+    .about-us img{
+        display: none;
     }
 }
 
