--- a/src/components/ItemOnCart.css
+++ b/src/components/ItemOnCart.css
@@ -30,6 +30,11 @@
 
 }
 
+.onCartItem .quantity-display{
+    display: flex;
+    align-content: space-around;
+}
+
 .onCartItem button{
     margin: auto;
     padding: 5px 15px;
@@ -40,6 +45,10 @@
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
     font-size: 17px;
     height: auto;
+}
+
+.onCartItem button{
+
 }
 
 .onCartItem button:hover{
