--- a/src/components/Cart.css
+++ b/src/components/Cart.css
@@ -5,7 +5,7 @@
     top: 70px;
     right: 40px;
     background-color: #ECECEC;
-    width: 700px;
+    width: 50%;
     height: auto;
 }
 
@@ -37,6 +37,7 @@
         width: 90%;
     }
 }
+
 
 .cart-panel .bot{
     display: grid;
