--- a/src/components/Cart.css
+++ b/src/components/Cart.css
@@ -16,10 +16,6 @@
     text-align: center;
 }
 
-.qty{
-    text-align: left;
-}
-
 .cart-panel h1{
     text-align: center;
     color: #424141;
@@ -31,6 +27,13 @@
     margin: 20px 25px;
     padding: 7px 15px;
 }
+
+.cart-panel .qty{
+    text-align: left;
+}
+
+
+
 
 @media (max-width: 700px) {
     .cart-panel{
