--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -1,3 +1,5 @@
+/*---- email upper section ------*/
+
 #contact .email{
     display: flex;
     align-content: center;
@@ -14,9 +16,28 @@
     color: #424141;
 }
 
+/*----- email button style section --------*/
+
 .button-area{
     align-self: center;
     flex-grow: 2;
+    position: relative;
+    display: inline-block;
+    width: 50%;
+}
+
+.button-area button{
+    border-radius: 20px;
+    background: #B6C72B;
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
+    border: 0;
+    color: white;
+    font-weight: bold;
+    padding: 10px 60px;
+    font-size: 20px;
+    position: absolute;
+    right: 5%;
+    top: 5px;
 }
 
 .button-area button:hover{
@@ -43,40 +64,7 @@
     color: #A09C99;
 }
 
-.button-area button{
-    border-radius: 20px;
-    background: #B6C72B;
-    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
-    border: 0;
-    color: white;
-    font-weight: bold;
-    padding: 10px 60px;
-    font-size: 20px;
-    position: absolute;
-    right: 5%;
-    top: 5px;
-}
-
-.button-area{
-    position: relative;
-    display: inline-block;
-    width: 50%;
-}
-
-.linhaa{
-    border: 1px solid #B3B3B3;
-    height: 500px;
-}
-
-.media-icon .green-social{
-    color: #B6C72B;
-    margin: 0 0 0 auto;
-}
-
-.media-icon{
-    display: flex;
-    justify-content: right;
-}
+/*----- left and right section -------*/
 
 .social{
     display: grid;
@@ -84,31 +72,44 @@
     margin-bottom: 40px;
 }
 
-.social .left-side{
-    margin: auto auto auto 40%;
-    width: 50%;
-}
+/*----- left side social section -------*/
+
 
 .left-side p{
     margin-top: 30px;
     color: #424141;
     font-size: 20px;
-    letter-spacing: 1.8px;
+    letter-spacing: 2px;
     line-height: 1.5;
     text-align: right;
 }
 
-.social .help{
-    width: 50%;
-    margin: auto 40% auto auto;
+.media-icon{
+    display: flex;
+    justify-content: right;
 }
 
-.help h2{
-    margin-left: 0;
+.media-icon .green-social{
+    color: #B6C72B;
+    margin: 0 0 0 auto;
 }
+
+.social .left-side{
+    margin: auto auto auto 40%;
+    width: 50%;
+}
+
+
+
+/*----- right side contacts section -------*/
 
 .contact-texts{
     display: flex;
+    margin: 30px auto;
+}
+
+.contact-texts .green-social{
+    color: #B6C72B;
 }
 
 .contact-texts p{
@@ -117,18 +118,18 @@
     color: #424141;
 }
 
-.contact-texts{
-    margin: 30px auto;
+.help h2{
+    margin-left: 0;
 }
 
-.contact-texts .green-social{
-    color: #B6C72B;
+.social .help{
+    width: 50%;
+    margin: auto 40% auto auto;
 }
 
-.green-social:hover{
-    color: #d2df6d;
-    cursor: pointer;
-}
+
+
+/*----- footer politic section ------*/
 
 .rights{
     text-decoration: underline;
@@ -144,14 +145,101 @@
     align-self: center;
 }
 
+
+/*----- button hover section ------*/
+
+.green-social:hover{
+    color: #d2df6d;
+    cursor: pointer;
+}
+
+/*----- line section------*/
+
+.line{
+    border: 1px solid #B3B3B3;
+    height: 500px;
+}
+
+
+
+
+
 @media (max-width: 1400px) {
-    .button-area input {
-        width: 70%;
+
+    /*----- left and right section -------*/
+
+    .social{
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr auto 1fr;
+        margin-bottom: 40px;
+    }
+
+    .line{
+        border: 1px solid #B3B3B3;
+        height: 0;
+        width: 90%;
         margin: auto;
     }
 
+
+    /*----- left side social section -------*/
+
+    .left-side p{
+        text-align: center;
+    }
+
+    .media-icon{
+        display: flex;
+        justify-content: left;
+    }
+
+    .media-icon .green-social{
+        color: #B6C72B;
+        margin: auto;
+    }
+
+    .social .left-side{
+        margin: auto;
+        width: 80%;
+    }
+
+
+    /*----- right side contacts section -------*/
+
+    .help h2{
+        margin-left: 0;
+        text-align: center;
+    }
+
+
+    .social .help{
+        width: 80%;
+        margin: auto;
+    }
+
+
+    /*----- email button style section --------*/
+
+
     .button-area{
         width: 100%;
+        margin: auto;
+    }
+
+    .button-area button{
+        border-radius: 20px;
+        background: #B6C72B;
+        box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
+        color: white;
+        font-weight: bold;
+        padding: 10px 60px;
+        font-size: 20px;
+        margin: auto;
+    }
+
+    .button-area input {
+        width: 70%;
         margin: auto;
     }
 
@@ -164,17 +252,6 @@
         height: auto;
         padding: 20px;
         row-gap: 20px;
-    }
-
-    .button-area button{
-        border-radius: 20px;
-        background: #B6C72B;
-        box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
-        color: white;
-        font-weight: bold;
-        padding: 10px 60px;
-        font-size: 20px;
-        margin: auto;
     }
 
     .email p{
